--- a/demo.html
+++ b/demo.html
@@ -6,12 +6,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
 	<title>weepy/ie-hover @ GitHub</title>
-	<link href='style.css' media="screen" rel="stylesheet" type="text/css"  />
+	<link href='http://weepy.github.com/style.css' media="screen" rel="stylesheet" type="text/css"  />
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 	<script type="text/javascript" src="http://github.com/weepy/ie-hover/raw/master/jquery.ie_hover.js"></script>
-	
-	 
-	 
 </head>
 
 <body>
@@ -19,8 +16,6 @@
   
   <div id="container">
 
-
-      
     <h1><a href="http://github.com/weepy/ie-hover">ie-hover</a> 
       <span class="small">by <a href="http://github.com/weepy">weepy</a></span></h1>
 
