--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
 	<title>weepy/ie-hover @ GitHub</title>
-	<link href='style.css' media="screen" rel="stylesheet" type="text/css"  />
+	<link href='http://weepy.github.com/style.css' media="screen" rel="stylesheet" type="text/css"  />
 
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
   
